--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 MONGODB_URI=mongodb+srv://visitante:password666@controleestoque.9a1cs.mongodb.net/controle-estoque?retryWrites=true&w=majority
-VITE_API_URL=https://seu-endereco-da-api.com/api/products
+VITE_API_URL=controle-de-estoque-rust.vercel.app/api/products
